<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_log"
    android:orientation="vertical"
    tools:context=".activities.Login">

    <!--Logo-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_logo" />
    <!--Name of the app-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/beautiful"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="35sp" />

    <!--Username-->
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/gaps"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_username"
        android:inputType="textPersonName" />

    <!--Password-->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="20dp"
        android:background="@drawable/gaps"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/et_password"
        android:inputType="textPassword" />

    <!--Sign in button-->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <!--Sign up text-->
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tv_sign_up"
        android:textColor="@color/colorLink" />

</LinearLayout>