<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_log"
    tools:context=".activities.Order">

    <EditText
        android:id="@+id/et_productName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/gaps"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/h_product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_productName"
        android:layout_alignStart="@+id/et_productName"
        android:layout_marginTop="20dp"
        android:background="@drawable/gaps"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/h_amount"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="250dp"
        android:layout_height="129dp"
        android:layout_above="@+id/btn_send_photo"
        android:layout_below="@+id/et_amount"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/gaps"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/h_description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_send_photo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_submit"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/buttons"
        android:text="@string/btn_attach_photo"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/buttons"
        android:text="@string/btn_submit_order"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>