<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:background="@drawable/stroke"
              android:layout_marginTop="3dp">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_item_image"
            android:layout_gravity="center"
            android:src="@drawable/unknown"
            app:civ_border_color="@color/colorButton"
            app:civ_border_width="3dp"
            android:padding="10dp"
            android:layout_height="80dp"
            android:layout_width="80dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <TextView
                android:text="@string/tv_company_name"
                android:id="@+id/tv_company_user_item"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:textColor="@color/colorText"
                android:layout_margin="1dp"/>
        <TextView
                android:text="@string/h_user_name"
                android:id="@+id/tv_name_user_item"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:textColor="@color/colorText"
                android:layout_margin="1dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:srcCompat="@drawable/star_rating_1_of_5"
                android:id="@+id/imageView"/>
        <TextView
                android:text="@string/h_interested"
                android:id="@+id/tv_interestedIn_user_item"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/colorText"
                android:layout_margin="1dp"/>
    </LinearLayout>
</LinearLayout>